Add right section and fix credits

--- a/index.html
+++ b/index.html
@@ -14,17 +14,28 @@
             <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="odin_logo">
             <h1 class="header">ODIN</h1>
         </div>
-        <div class="credits">Photo by <a href="https://unsplash.com/fr/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/fr/photos/plante-a-feuilles-vertes-en-photographie-en-gros-plan-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-        </div>
+        <p class="credits">Photo by <a href="https://unsplash.com/fr/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/fr/photos/plante-a-feuilles-vertes-en-photographie-en-gros-plan-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </p>
     </div>
     <div class="right-section">
-        <p></p>
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
+            <br>Sign up <em>now</em> to get started. <br> <br>You know you want to.
+        </p>
         <div class="form-container">
-            <h1></h1>
-            <form action=""></form>
+            <h1>Let's do this!</h1>
+            <form action="">
+                <div class="firstname"><label for="">FIRST NAME</label><input type="text"></div>
+                <div class="lastname"><label for="">LAST NAME</label><input type="text"></div>
+                <div class="email"><label for="">EMAIL</label><input type="email"></div>
+                <div class="phone"> <label for="">PHONE NUMBER</label><input type="text"></div>
+               <div class="password"><label for="">PASSWORD</label><input type="password"><div>*Passwords do not match</div></div>
+                <div class="passwordC"><label for="">CONFIRM PASSWORD</label><input type="password"></div>
+                
+                
+            </form>
         </div>
-        <button></button>
-        <p><a href=""></a></p>
+        <div class="button-container"><button>Create Account</button></div>
+        <p id="login">Already have an account?<a href=""> Log in</a></p>
     </div>
 
 </body>
